# sustainability-energy

./: README.md
EcoGridAI/EcoGridAI/: app.py  pyproject.toml
EcoGridAI/EcoGridAI/database/: db_operations.py  models.py
EcoGridAI/EcoGridAI/pages/: 1_Energy_Dashboard.py  2_Financial_Analytics.py  3_Grid_Management.py  4_AI_Assistant.py  5_Carbon_Tracker.py
EcoGridAI/EcoGridAI/utils/: ai_assistant.py  data_generator.py  energy_forecasting.py  financial_calculations.py  weather_api.py
